--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Test
 
-on: 
+on:
   pull_request:
   push:
     branches:
@@ -10,11 +10,9 @@ jobs:
   go-test:
     name: "Go Test"
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         go-version: [1.14.x, 1.15.x, 1.16.x]
-
     steps:
       - name: Install Go
         uses: actions/setup-go@v1
@@ -32,6 +30,7 @@ jobs:
         run: make deps
       - name: Test
         run: make test
+
   go-mod-tidy:
     name: "Go mod tidy"
     runs-on: ubuntu-latest
@@ -50,3 +49,29 @@ jobs:
             ${{ runner.os }}-go-
       - name: Tidy check
         run: go mod tidy
+
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14.x
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Fetch dependencies
+        run: make deps
+      - name: Run tests
+        run: make cov
+      - name: Upload coverage
+        uses: codecov/codecov-action@v1
+        with:
+          flags: unittests
+          file: .cover.out
+          token: ${{ secrets.CODECOV_TOKEN }}
